deploy-ops-and-apps-in-one-vpc-with-ec2/0-deploy-ops-infra-from-local/terraform/sg.tf
resource "aws_security_group" "public_ssh" {
  vpc_id = module.vpc.vpc_id
  name   = "PublicSSH"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "public_jenkins_web" {
  vpc_id = module.vpc.vpc_id
  name   = "PublicJenkinsWeb"

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "public_http" {
  vpc_id = module.vpc.vpc_id
  name   = "PublicHTTP"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "public_https" {
  vpc_id = module.vpc.vpc_id
  name   = "PublicHTTPS"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "private_all" {
    vpc_id = module.vpc.vpc_id
    name   = "PrivateAll"
    
    ingress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        self = true
    }

    egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
